--- a/foodpedia/package.json
+++ b/foodpedia/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
